--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,19 @@
     body {
-        color: green;
-        font-size: 55px;
+        text-align: center;
+        font-family: Helvetica;
+    }
+    .main-ban {
+        background-image: url(https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png);
+        color: white;
+    }
+    .main-title {
+        font-size: 70px;
+        font-weight: bold;
+    }
+    .main-nav {
+        font-size: 18px;
+        list-style: none;
+    }
+    .main-nav li {
+        padding: 5px 0px 5px 0px;
     }
